--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,3 +1,4 @@
 spring.application.name=RateLimitingService2024
-spring.data.redis.host=localhost
+#spring.data.redis.host=localhost
+spring.data.redis.host=${SPRING_DATA_REDIS_HOST:localhost}
 spring.data.redis.port=6379
