--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,3 +3,6 @@ spring.application.name=RateLimitingService2024
 spring.data.redis.host=${SPRING_DATA_REDIS_HOST:localhost}
 spring.data.redis.port=6379
 jwt.secret=myJWTSecretKey123!
+
+logging.level.root=DEBUG
+logging.level.com.iths=DEBUG
